--- a/HyuJokbo/HyuJokbo/MydataTabStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/MydataTabStoryboard.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="SEw-kb-stW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="SEw-kb-stW">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +26,7 @@
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="HCz-QP-7cB" kind="relationship" relationship="rootViewController" id="xzU-nM-utq"/>
+                        <segue destination="H29-47-59z" kind="relationship" relationship="rootViewController" id="PtB-Ye-49N"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VvZ-9A-8Jf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -33,37 +34,64 @@
             <point key="canvasLocation" x="-705" y="637"/>
         </scene>
         <!--내 정보-->
-        <scene sceneID="g8Y-Rz-nvw">
+        <scene sceneID="JHn-jg-vvZ">
             <objects>
-                <viewController id="HCz-QP-7cB" userLabel="내 정보" customClass="MydataViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="H29-47-59z" customClass="MyDataViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="rrq-yG-7Qi"/>
-                        <viewControllerLayoutGuide type="bottom" id="4Ha-wm-tFs"/>
+                        <viewControllerLayoutGuide type="top" id="7VF-2D-PYg"/>
+                        <viewControllerLayoutGuide type="bottom" id="io6-Nr-Qer"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kC9-jq-EV5">
+                    <view key="view" contentMode="scaleToFill" id="RLw-ra-Soj">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6id-s0-mns" customClass="HorizontalScrollView" customModule="HyuJokbo" customModuleProvider="target">
-                                <rect key="frame" x="40" y="64" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ddF-OM-4WB" userLabel="Invisible">
-                                <rect key="frame" x="40" y="356" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="76j-zA-T7C">
+                                <rect key="frame" x="130" y="75" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="jHj-Q9-eGN"/>
+                                    <constraint firstAttribute="width" constant="60" id="nfe-zx-IGI"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-rU-PWK">
+                                <rect key="frame" x="139" y="145" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="Fd1-t8-L7J"/>
+                                    <constraint firstAttribute="height" constant="21" id="SjR-A0-k2Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="님" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNI-yo-Qgn">
+                                <rect key="frame" x="189" y="147" width="12" height="19"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="12" id="4Xz-Gg-C8O"/>
+                                    <constraint firstAttribute="height" constant="19" id="v0f-5z-5RK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CNI-yo-Qgn" firstAttribute="bottom" secondItem="rbA-rU-PWK" secondAttribute="bottom" id="diT-OU-uAB"/>
+                            <constraint firstItem="76j-zA-T7C" firstAttribute="centerX" secondItem="RLw-ra-Soj" secondAttribute="centerX" id="edA-Ap-ndc"/>
+                            <constraint firstItem="rbA-rU-PWK" firstAttribute="centerX" secondItem="76j-zA-T7C" secondAttribute="centerX" id="lyk-D7-e42"/>
+                            <constraint firstItem="76j-zA-T7C" firstAttribute="top" secondItem="7VF-2D-PYg" secondAttribute="bottom" constant="75" id="wzo-5I-eSn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CNI-yo-Qgn" secondAttribute="trailing" constant="103" id="yiP-MJ-xPu"/>
+                            <constraint firstItem="rbA-rU-PWK" firstAttribute="top" secondItem="7VF-2D-PYg" secondAttribute="bottom" constant="145" id="zxz-69-oGw"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="내 정보" id="zFS-XC-9EG"/>
+                    <navigationItem key="navigationItem" title="내 정보" id="s5P-Sb-kcQ"/>
                     <connections>
-                        <outlet property="InvisibleScroll" destination="ddF-OM-4WB" id="pFI-k5-dxX"/>
-                        <outlet property="slideScroll" destination="6id-s0-mns" id="6eP-D8-SIU"/>
+                        <outlet property="myImage" destination="76j-zA-T7C" id="TYj-pQ-dr0"/>
+                        <outlet property="myName" destination="rbA-rU-PWK" id="Jfc-Rp-06M"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="reH-7i-re9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MTE-3N-MJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="165" y="637"/>
+            <point key="canvasLocation" x="84.375" y="636.97183098591552"/>
         </scene>
     </scenes>
     <resources>
